--- a/Downloads/vscode/124/124app/package.json
+++ b/Downloads/vscode/124/124app/package.json
@@ -10,12 +10,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1",
     "vue": "^3.3.4",
-    "@tauri-apps/api": "^1"
+    "vuetify": "^3.7.2"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1",
     "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.1",
-    "@tauri-apps/cli": "^1"
+    "vite": "^5.3.1"
   }
 }
