--- a/124app/package.json
+++ b/124app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1",
+    "tauri": "^0.15.0",
     "vue": "^3.3.4",
     "vuetify": "^3.7.2"
   },
