--- a/124app/package.json
+++ b/124app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@guolao/vue-monaco-editor": "^1.5.4",
+    "@mdi/font": "^7.4.47",
     "@tauri-apps/api": "^1",
     "vue": "^3.3.4",
     "vuetify": "^3.7.2"
