--- a/124app/package.json
+++ b/124app/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.4.47",
     "@tauri-apps/api": "^1",
     "axios": "^1.7.9",
+    "monaco-editor": "^0.52.0",
     "vite": "^x.x.x",
     "vue": "^3.3.4",
     "vuetify": "^3.7.2"
